<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/settings_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp" >

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Back" />

                <com.hexairbot.hexmini.ViewPagerIndicator
                    android:id="@+id/pageIndicator"
                    style="@style/ViewPagerIndicatorStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/settings_title_connection" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="217dp"
                android:layout_marginTop="14dp" >

                <ImageButton
                    android:id="@+id/preBtn"
                    style="@style/SettingsNavigationButton.Prev"
                    android:layout_width="@dimen/setttings_navigation_buton_width"
                    android:layout_height="fill_parent"
                    android:src="@drawable/arrow_left_orange"
                    android:visibility="invisible" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/nextBtn"
                    android:layout_toRightOf="@+id/preBtn" >
                </android.support.v4.view.ViewPager>

                <ImageButton
                    android:id="@+id/nextBtn"
                    style="@style/SettingsNavigationButton.Next"
                    android:layout_width="@dimen/setttings_navigation_buton_width"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/arrow_right_orange" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/defaultSettingsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_title_default_settings" />

                <Button
                    android:id="@+id/magCalibrateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="60dp"
                    android:layout_toRightOf="@+id/accCalibrateBtn"
                    android:text="@string/btn_title_calibrate_mag" />

                <Button
                    android:id="@+id/accCalibrateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/defaultSettingsBtn"
                    android:text="@string/btn_title_calibrate_acc" />

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>