<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <View
        android:id="@+id/view1"
        android:layout_width="80dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_below="@+id/view1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/seekBar1"
        android:layout_marginRight="@dimen/settings_h_gap"
        android:layout_toLeftOf="@+id/seekBar1"
        android:text="@string/settings_item_take_off_throttle"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="50%"
        android:textColor="@color/orange"
        android:textSize="@dimen/settings_indicator_text_size" />

    <SeekBar
        android:id="@+id/SeekBar01"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBar1"
        android:layout_below="@+id/seekBar1"
        android:layout_marginTop="@dimen/settings_v_gap" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignTop="@+id/SeekBar01"
        android:text="@string/settings_item_aileron_and_elevator_dead_band"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:text="50%"
        android:textColor="@color/orange"
        android:textSize="@dimen/settings_indicator_text_size" />

    <SeekBar
        android:id="@+id/SeekBar02"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SeekBar01"
        android:layout_below="@+id/SeekBar01"
        android:layout_marginTop="@dimen/settings_v_gap" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextView02"
        android:layout_alignTop="@+id/SeekBar02"
        android:text="@string/settings_item_rudder_dead_band"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextView04"
        android:layout_below="@+id/TextView04"
        android:text="50%"
        android:textColor="@color/orange"
        android:textSize="@dimen/settings_indicator_text_size" />

</RelativeLayout>